--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/submitContact"
         android:layout_centerHorizontal="true"
-        android:text="Effacer" />
+        android:text="Réinitialiser" />
 
     <Button
         android:id="@+id/returnContact"
@@ -88,8 +88,9 @@
         android:id="@+id/titreContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/returnContact"
+        android:layout_marginStart="12dp"
         android:text="TITRE"
         android:textColor="@android:color/background_dark"
         android:textSize="30sp"
@@ -109,10 +110,10 @@
 
     <ImageView
         android:id="@+id/imagevendeurContact"
-        android:layout_width="101dp"
-        android:layout_height="106dp"
+        android:layout_width="99dp"
+        android:layout_height="110dp"
         android:layout_above="@+id/vendeurContact"
-        android:layout_alignEnd="@+id/submitContact"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="-123dp"
         app:srcCompat="@drawable/seller" />
 
@@ -120,10 +121,9 @@
         android:id="@+id/vendeurContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="123dp"
+        android:layout_marginTop="133dp"
         android:text="NOM VENDEUR"
         android:textColor="@android:color/background_dark"
         android:textSize="16sp" />
