--- a/app/src/main/res/layout/activity_confirmation_message.xml
+++ b/app/src/main/res/layout/activity_confirmation_message.xml
@@ -8,25 +8,24 @@
 
     <ImageView
         android:id="@+id/imageContact"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="70dp"
         app:srcCompat="@mipmap/ic_launcher"
         tools:layout_editor_absoluteX="42dp"
         tools:layout_editor_absoluteY="42dp" />
 
     <TextView
         android:id="@+id/titreConfirm"
-        android:layout_width="272dp"
-        android:layout_height="33dp"
-        android:layout_above="@+id/vendeurConfirm"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="40dp"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:text="TextView"
         android:textColor="@android:color/black"
+        android:textSize="18sp"
         tools:layout_editor_absoluteX="132dp"
         tools:layout_editor_absoluteY="44dp" />
 
@@ -34,9 +33,10 @@
         android:id="@+id/vendeurConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/prixConfirm"
-        android:layout_alignEnd="@+id/retourAnnonceConfirm"
-        android:layout_marginBottom="-69dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="-70dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="288dp"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="69dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="86dp"
         android:text="TextView"
         tools:layout_editor_absoluteX="208dp"
@@ -58,9 +58,10 @@
         android:id="@+id/catConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/prixConfirm"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="117dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="123dp"
+        android:layout_marginTop="141dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="132dp"
