--- a/app/src/main/res/layout/activity_contacter_vendeur.xml
+++ b/app/src/main/res/layout/activity_contacter_vendeur.xml
@@ -8,22 +8,20 @@
 
     <ImageView
         android:id="@+id/imageContact"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/dateConfirm"
-        android:layout_marginBottom="-122dp"
-        android:layout_toStartOf="@+id/messageContact"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp"
         app:srcCompat="@mipmap/ic_launcher"
         tools:layout_editor_absoluteX="42dp"
         tools:layout_editor_absoluteY="42dp" />
 
     <TextView
         android:id="@+id/titreConfirm"
-        android:layout_width="295dp"
+        android:layout_width="265dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="28dp"
-        android:layout_toEndOf="@+id/imageContact"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="30dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="132dp"
@@ -55,9 +53,9 @@
         android:id="@+id/catContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageContact"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="111dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="90dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="132dp"
@@ -93,9 +91,9 @@
         android:id="@+id/telContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="189dp"
+        android:layout_marginTop="270dp"
         android:ems="10"
         android:hint="Numéro Telephone"
         android:inputType="number"
@@ -106,9 +104,9 @@
         android:id="@+id/messageContact"
         android:layout_width="217dp"
         android:layout_height="82dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="95dp"
+        android:layout_marginTop="320dp"
         android:ems="10"
         android:hint="Message*"
         android:inputType="textPersonName"
@@ -121,7 +119,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/resetContact"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="14dp"
+        android:layout_marginStart="13dp"
         android:text="valider"
         tools:layout_editor_absoluteX="42dp"
         tools:layout_editor_absoluteY="420dp" />
@@ -130,8 +128,9 @@
         android:id="@+id/resetContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/retourContact"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="52dp"
         android:text="reset"
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="420dp" />
@@ -140,10 +139,9 @@
         android:id="@+id/retourContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/validerContact"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginEnd="16dp"
         android:text="retour"
         tools:layout_editor_absoluteX="266dp"
         tools:layout_editor_absoluteY="420dp" />
