--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="66dp"
-        android:layout_height="61dp"
+        android:layout_width="106dp"
+        android:layout_height="128dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="15dp"
@@ -18,10 +18,10 @@
 
     <TextView
         android:id="@+id/titreannonce"
-        android:layout_width="115dp"
-        android:layout_height="32dp"
+        android:layout_width="135dp"
+        android:layout_height="46dp"
         android:layout_alignTop="@+id/imageView2"
-        android:layout_toEndOf="@+id/categorieannonce"
+        android:layout_centerHorizontal="true"
         android:text="titreannonce"
         android:textColor="@android:color/black" />
 
@@ -31,8 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="106dp"
+        android:layout_marginStart="93dp"
+        android:layout_marginTop="186dp"
         android:text="categorieannonce" />
 
     <TextView
@@ -53,11 +53,11 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="277dp"
-        android:layout_height="87dp"
+        android:layout_width="297dp"
+        android:layout_height="90dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="145dp"
+        android:layout_marginBottom="142dp"
         android:text="Votre message a bien été envoyé au vendeur.AssKicker reviendra vers vous rapidement. Bonne journée    L'équipe de lesbonneaffairesdebibi.fr" />
 
     <Button
