--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -43,9 +43,10 @@
         android:id="@+id/ctcCategorie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/ctcNom"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="131dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="101dp"
         android:text="categorieannonce"
         tools:layout_editor_absoluteX="127dp"
         tools:layout_editor_absoluteY="83dp" />
@@ -73,56 +74,53 @@
 
     <EditText
         android:id="@+id/ctcNom"
-        android:layout_width="184dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/ctcEmail"
+        android:layout_width="202dp"
+        android:layout_height="49dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="163dp"
+        android:layout_marginTop="134dp"
+        android:layout_toEndOf="@+id/ctcImage"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/nom"
-        android:textSize="8sp"
+        android:textSize="12sp"
         tools:layout_editor_absoluteX="63dp"
         tools:layout_editor_absoluteY="128dp" />
 
     <EditText
         android:id="@+id/ctcEmail"
-        android:layout_width="184dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/ctcPhone"
+        android:layout_width="202dp"
+        android:layout_height="44dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="202dp"
+        android:layout_marginTop="197dp"
+        android:layout_toEndOf="@+id/ctcImage"
         android:ems="10"
         android:inputType="textWebEmailAddress"
-        android:text="@string/email"
-        android:textSize="8sp"
+        android:textSize="12sp"
         tools:layout_editor_absoluteX="62dp"
         tools:layout_editor_absoluteY="174dp" />
 
     <EditText
         android:id="@+id/ctcPhone"
-        android:layout_width="182dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/ctcDesc"
+        android:layout_width="202dp"
+        android:layout_height="44dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="176dp"
+        android:layout_marginBottom="207dp"
+        android:layout_toEndOf="@+id/ctcImage"
         android:ems="10"
         android:inputType="phone"
-        android:text="@string/phone"
-        android:textSize="8sp"
+        android:textSize="12sp"
         tools:layout_editor_absoluteX="62dp"
         tools:layout_editor_absoluteY="220dp" />
 
     <EditText
         android:id="@+id/ctcDesc"
-        android:layout_width="249dp"
-        android:layout_height="82dp"
+        android:layout_width="266dp"
+        android:layout_height="104dp"
+        android:layout_alignStart="@+id/ctcTitre"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="82dp"
+        android:layout_marginBottom="96dp"
         android:ems="10"
+        android:gravity="top"
         android:inputType="textMultiLine"
-        android:text="@string/desc"
         android:textSize="8sp"
         tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="300dp" />
@@ -157,4 +155,38 @@
         android:text="Retour"
         tools:layout_editor_absoluteX="219dp"
         tools:layout_editor_absoluteY="389dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/ctcNom"
+        android:layout_alignEnd="@+id/ctcImage"
+        android:text="@string/nom" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/ctcImage"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="213dp"
+        android:text="@string/email" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="218dp"
+        android:text="@string/phone" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/ctcDesc"
+        android:layout_alignParentStart="true"
+        android:text="@string/desc" />
 </RelativeLayout>
