--- a/app/src/main/res/layout/activity_creation_annonce.xml
+++ b/app/src/main/res/layout/activity_creation_annonce.xml
@@ -74,7 +74,7 @@
         android:hint="@string/Ville"
         android:inputType="textPersonName" />
 
-    <EditText
+    <Spinner
         android:id="@+id/categorieCreationAnnonce"
         android:layout_width="match_parent"
         android:layout_height="44dp"
