Glide for image + minor modifications

--- a/app/src/main/res/layout/activity_add_entry.xml
+++ b/app/src/main/res/layout/activity_add_entry.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -11,29 +7,29 @@
         android:layout_height="match_parent"
         tools:context=".ui.AddEntryActivity">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/imagenotfound" />
+        <ImageView
+            android:id="@+id/imagenotfoundAdd"
+            android:layout_width="231dp"
+            android:layout_height="151dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/imagenotfound" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView2"
-        android:layout_centerHorizontal="true"
-        android:text="Sélectionner une photo" />
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imagenotfoundAdd"
+            android:layout_centerHorizontal="true"
+            android:text="Sélectionner une photo" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="302dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/imageView2"
-        android:layout_marginTop="261dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="253dp"
         android:ems="10"
         android:hint="Nom*"
         android:inputType="textPersonName" />
@@ -42,7 +38,7 @@
         android:id="@+id/editText2"
         android:layout_width="302dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/editText5"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="Adresse Email*"
@@ -52,9 +48,8 @@
         android:id="@+id/editText3"
         android:layout_width="302dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/imageView2"
-        android:layout_marginBottom="266dp"
+        android:layout_below="@+id/editText"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="Mot de passe "
         android:inputType="textPassword" />
@@ -63,9 +58,8 @@
         android:id="@+id/editText4"
         android:layout_width="302dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/imageView2"
-        android:layout_marginBottom="209dp"
+        android:layout_below="@+id/editText3"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="Confirmation du mot de passe "
         android:inputType="textPassword" />
@@ -74,51 +68,50 @@
         android:id="@+id/editText5"
         android:layout_width="302dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/editText4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="139dp"
         android:ems="10"
         android:hint="Titre"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editText7"
-        android:layout_width="wrap_content"
+        android:layout_width="302dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/imageView2"
+        android:layout_below="@+id/editText6"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="Ville ou code postal"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editText8"
-        android:layout_width="wrap_content"
+        android:layout_width="302dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/imageView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="38dp"
         android:ems="10"
         android:hint="Catégories*"
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/editText9"
-        android:layout_width="wrap_content"
+        android:id="@+id/editText10"
+        android:layout_width="302dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/imageView2"
+        android:layout_below="@+id/editText7"
+        android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="Prix*"
+        android:hint="Description"
         android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/editText10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/imageView2"
-            android:ems="10"
-            android:hint="Description"
-            android:inputType="textPersonName" />
+    <EditText
+        android:id="@+id/editText6"
+        android:layout_width="302dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText2"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="Prix*"
+        android:inputType="number" />
 </RelativeLayout>
-</ScrollView>
