--- a/app/src/main/res/layout/activity_annonce_detail.xml
+++ b/app/src/main/res/layout/activity_annonce_detail.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/ImageAnnonce"
-        android:layout_width="230dp"
-        android:layout_height="205dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/TitreAnnonce"
         app:srcCompat="@drawable/no_image" />
@@ -33,7 +33,8 @@
         android:layout_height="46dp"
         android:layout_alignTop="@+id/ImageAnnonce"
         android:layout_toEndOf="@+id/ImageAnnonce"
-        android:gravity="center"
+        android:gravity="left"
+        android:layout_marginLeft="15dp"
         android:text="Categorie" />
 
     <TextView
@@ -42,7 +43,8 @@
         android:layout_height="47dp"
         android:layout_below="@+id/CategorieAnnonce"
         android:layout_toEndOf="@+id/ImageAnnonce"
-        android:gravity="center"
+        android:layout_marginLeft="15dp"
+        android:gravity="left"
         android:text="Prix" />
 
     <TextView
@@ -105,6 +107,7 @@
         android:layout_toEndOf="@+id/imageView4"
         android:background="@color/colorPrimary"
         android:text="@string/ContacterLeVendeur"
+        android:layout_marginBottom="16dp"
         android:textColor="@android:color/white" />
 
 
