--- a/app/src/main/res/layout/activity_reponse.xml
+++ b/app/src/main/res/layout/activity_reponse.xml
@@ -114,7 +114,7 @@
         android:layout_below="@+id/emailReponse"
         android:ems="10"
         android:hint="@string/NumTel"
-        android:inputType="textPersonName" />
+        android:inputType="phone" />
 
     <EditText
         android:id="@+id/messageRep"
