--- a/app/src/main/res/layout/activity_add_ad.xml
+++ b/app/src/main/res/layout/activity_add_ad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ynov.lesbonnesaffairesdebibi.ViewModel.MainActivity">
+    tools:context="com.example.ynov.lesbonnesaffairesdebibi.ViewModel.AddAd">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_add_ad" />
 
 </android.support.design.widget.CoordinatorLayout>
