--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#3f51b5</color>
+    <color name="colorAccent">#FF4081</color>
     <color name="colorRow">#4B77BE</color>
     <color name="colorRowMain">#5C97BF</color>
 </resources>
